dowload bug fix

--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                                                 </td>
                                                 <td class="resultsColumn"></td> 
                                                 <td><a id="download" class="btn btn-sm btn-primary downloadButton"  onclick="searchCMDBData()" >Download</a></td>
+
                                             </tr>
                                             
                                             <tr>
@@ -156,7 +157,8 @@
                                                     </div>
                                                 </td>
                                                 <td class="resultsColumn"></td> 
-                                                <td><a class="btn btn-sm btn-primary" href="">Download</a></td>
+                                                <td><a class="btn btn-sm btn-primary downloadButton" onclick="downloadFile('/img/Qualys.xlsx')">Download</a></td>
+
                                             </tr>
                                             <tr>
                                                 <td><input class="form-check-input" type="checkbox"></td>
@@ -168,7 +170,7 @@
                                                     </div>
                                                 </td>
                                                 <td class="resultsColumn"></td>
-                                                <td><a class="btn btn-sm btn-primary" href="">Download</a></td>
+                                                <td><a class="btn btn-sm btn-primary downloadButton" onclick="downloadFile('/img/Jira Tickets.xlsx')">Download</a></td>
                                             </tr>
                                             <tr>
                                                 <td><input class="form-check-input" type="checkbox"></td>
@@ -252,8 +254,11 @@
           <!---Load----->
           <script src="load.js"></script>
 
+
           <!---xsxl-->
           <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.0/xlsx.full.min.js"></script>
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </body>
 
 </html>
