--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.0/xlsx.full.min.js"></script>
 
+        <!--logout-->
+        <script src="logout.js" defer type ="module"></script>
+
 
 </head>
 
@@ -106,7 +109,7 @@
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">My Profile</a>
                             <a href="#" class="dropdown-item">Settings</a>
-                            <a href="#" class="dropdown-item">Log Out</a>
+                            <a id="logoutBtn"  class="dropdown-item">Log Out</a>
                         </div>
                     </div>
                 </div>
