--- a/signup.html
+++ b/signup.html
@@ -57,10 +57,10 @@
                     
                             <h3>Sign Up</h3>
                         </div>
-                        <div class="form-floating mb-3">
+                        <!-- <div class="form-floating mb-3">
                             <input type="text" class="form-control" id="username" placeholder="Username">
                             <label for="floatingText">Username</label>
-                        </div>
+                        </div> -->
                         <div class="form-floating mb-3">
                             <input type="email" class="form-control" id="email" placeholder="name@example.com">
                             <label for="floatingInput">Email address</label>
@@ -70,10 +70,10 @@
                             <label for="floatingPassword">Password</label>
                         </div>
                         <div class="d-flex align-items-center justify-content-between mb-4">
-                            <div class="form-check">
+                            <!-- <div class="form-check">
                                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
                                 <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                            </div>
+                            </div> -->
                             <a href="">Forgot Password</a>
                         </div>
                         <button type="submit" class="btn btn-primary py-3 w-100 mb-4" id="submitData">Sign Up</button>
