--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <form>
                             <div class="input-group">
                                 <label for="searchInput">Jira Ticket</label>
-                                <input id="searchInput" class="form-control bg-dark border-0" type="search" placeholder="Jira ticket number">
+                                <input id="searchInput" class="form-control border-0" type="search" placeholder="Jira ticket number">
                             </div>
                         </form>
 
@@ -104,7 +104,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                             <img class="rounded-circle me-lg-2" src="img/Gen.jpg" alt="" style="width: 40px; height: 40px;">
-                            <span class="d-none d-lg-inline-flex">Sandile Mhlongo</span>
+                            <span class="d-none d-lg-inline-flex">Malusi Mhlongo</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">My Profile</a>
@@ -117,28 +117,28 @@
             <!-- Navbar End -->
 
                         <!-- Recent evidence Start -->
-                        <div class="container-fluid pt-4 px-4">
+                        <div class="container-fluid pt-1 px-1">
                             <div class="bg-secondary text-center rounded p-4">
                                 <div class="d-flex align-items-center justify-content-between mb-4">
-                                    <h6 class="mb-0"> Evidence collections</h6>
-                                    <a href="">Show All</a>
+                                    <h6 class="mb-0"> Evidence collection</h6>
+                                    
                                 </div>
                                 <div class="table-responsive">
                                     <table class="table text-start align-middle table-bordered table-hover mb-0">
                                         <thead>
                                             <tr class="text-white">
                                                 <th scope="col"><input class="form-check-input" type="checkbox" id="selectAllCheckbox"></th>
-                                                <th scope="col">Name</th>
-                                                <th scope="col">Initiate</th>
+                                                <th scope="col">System</th>
+                                                <th scope="col">Scan</th>
                                                 <th scope="col">Status</th>
                                                 <th scope="col">Results</th>
-                                                <th scope="col">Download report</th>
+                                                <th scope="col">Download Report</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             <tr>
                                                 <td><input class="form-check-input" type="checkbox" data-download-link="/img/search_results.json" data-file-name="/img/search_results.json"></td>
-                                                <td>Search CMDB</td>
+                                                <td>Central Management Database (CMDB)</td>
                                                 <td><a class="btn btn-sm btn-success startButton" href="#">Start</a></td>
                                                 <td>
                                                     <div class="progress">
@@ -151,8 +151,8 @@
                                             </tr>
                                             
                                             <tr>
-                                                <td><input class="form-check-input" type="checkbox" data-download-link="/img/Qualys.xlsx" data-file-name="/img/Qualys.xlsx"></td>
-                                                <td>Verify security scans (Qualis)</td>
+                                                <td><input class="form-check-input" type="checkbox" data-download-link="/img/Qualys.xlsx" data-file-name="`Qualys hostname:${hostname}.xlsx`"></td>
+                                                <td>Vulnerability Management(Qualys)</td>
                                                 <td><a class="btn btn-sm btn-success startButton" href="#">Start</a></td>
                                                 <td>
                                                     <div class="progress">
@@ -160,12 +160,12 @@
                                                     </div>
                                                 </td>
                                                 <td class="resultsColumn"></td> 
-                                                <td><a class="btn btn-sm btn-primary downloadButton" data-download-link="/img/Qualys.xlsx" data-file-name="/img/Qualys.xlsx" onclick="downloadFile('/img/Qualys.xlsx')">Download</a></td>
+                                                <td><a class="btn btn-sm btn-primary downloadButton" data-download-link="/img/Qualys.xlsx" data-file-name="`Qualys hostname:${hostname}.xlsx`" onclick="downloadFile('/img/Qualys.xlsx')">Download</a></td>
 
                                             </tr>
                                             <tr>
                                                 <td><input class="form-check-input" type="checkbox" data-download-link="/img/WAF.xlsx" data-file-name="/img/WAF.xlsx"></td>
-                                                <td>Check firewall rules</td>
+                                                <td>IT Firewall Rules</td>
                                                 <td><a class="btn btn-sm btn-success startButton" href="#">Start</a></td>
                                                 <td>
                                                     <div class="progress">
@@ -177,7 +177,7 @@
                                             </tr>
                                             <tr>
                                                 <td><input class="form-check-input" type="checkbox" data-download-link="/img/Jira Tickets.xlsx" data-file-name="/img/Jira Tickets.xlsx"></td>
-                                                <td>Check CyberArk</td>
+                                                <td>Privilige Access Management (CyberArk)</td>
                                                 <td><a class="btn btn-sm btn-success startButton" href="#">Start</a></td>
                                                 <td>
                                                     <div class="progress">
@@ -189,7 +189,7 @@
                                             </tr>
                                             <tr>
                                                 <td><input class="form-check-input" type="checkbox" data-download-link="/img/Jira Tickets.xlsx" data-file-name="/img/Jira Tickets.xlsx"></td>
-                                                <td>Check UAM rules</td>
+                                                <td>User Access Management (Whitepages)</td>
                                                 <td><a class="btn btn-sm btn-success startButton" href="#">Start</a></td>
                                                 <td>
                                                     <div class="progress">
@@ -201,7 +201,7 @@
                                             </tr>
                                             <tr>
                                                 <td><input class="form-check-input" type="checkbox"></td>
-                                                <td>Third party Valuation</td>
+                                                <td>Third party Validation (Supplier Cyber Security)</td>
                                                 <td><a class="btn btn-sm btn-success startButton" href="#">Start</a></td>
                                                 <td>
                                                     <div class="progress">
